<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/home"
            android:title="@string/home_title"></item>
        <item
            android:id="@+id/nav_menu_queue"
            android:icon="@drawable/play_queue"
            android:title="@string/play_queue"></item>
        <item
            android:id="@+id/nav_menu_pay_list"
            android:icon="@drawable/play_list"
            android:title="@string/play_list"></item>
        <item
            android:id="@+id/nav_menu_artist"
            android:icon="@drawable/artist"
            android:title="@string/artist"></item>
        <item
            android:id="@+id/nav_menu_album"
            android:icon="@drawable/album"
            android:title="@string/album"></item>
        <item
            android:id="@+id/nav_menu_song"
            android:icon="@drawable/song"
            android:title="@string/song"></item>
        <item
            android:id="@+id/nav_menu_school"
            android:icon="@drawable/school"
            android:title="@string/school"></item>


    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"></item>
    </group>
</menu>